--- a/app/src/main/res/layout/add_note_activity.xml
+++ b/app/src/main/res/layout/add_note_activity.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:weightSum="1">
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:text="Name"
+        android:hint="Texto de la nota"
         android:ems="10"
         android:id="@+id/editText"
-        android:singleLine="false" />
+        android:lines="10"
+        android:layout_weight="0.03" />
 
     <Button
-        android:text="Button"
+        android:text="Insertar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/button" />
